<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dinothawr</string>

    <string name="controls">Controls</string>

    <string name="credits">Credits</string>

    <string name="quit">Quit</string>

    <string name="title_image">Title image</string>

    <string name="start">Start</string>

    <string name="retroarch"><![CDATA[<a href="http://libretro.org">RetroArch</a>]]></string>

    <string name="agnes_heyer">Agnes Heyer</string>

    <string name="_art_n_level_design">" Art\n Level design"</string>

    <string name="hans_kristian_arntzen">Hans-Kristian Arntzen</string>

    <string name="_programming_n_music">" Programming\n Music\n Level design"</string>

    <string name="software_used">Software used</string>

    <string name="libvorbis"><![CDATA[<a href="http://xiph.org/vorbis/>libvorbis</a>]]></string>
    <string name="options">Options</string>
    
    <string-array name="shaders">
        <item>None</item>
        <item>Scanline</item>
        <item>HQ2x</item>
        <item>LCD3x</item>
        <item>Phosphor</item>
    </string-array>
    <string-array name="shaders_path">
        <item></item>
        <item>scanline.glsl</item>
        <item>hq2x.glslp</item>
        <item>lcd3x.glslp</item>
        <item>phosphor.glsl</item>
    </string-array>
        <string name="extracting_assets_please_wait_">Extracting assets, please wait ...</string>
        <string name="instructions">Instructions</string>
        <string name="pugixml"><![CDATA[<a href="http://code.google.com/p/pugixml/">pugixml</a>]]></string>

</resources>